@@ -288,9 +288,9 @@ implements DisaggregationCalculatorAPI{
 			Parameter<Double> im = imr.getIntensityMeasure();
 			if (im instanceof WarningParameter<?>) {
 				WarningParameter<Double> warnIM = (WarningParameter<Double>)im;
-				warnIM.setValueIgnoreWarning(new Double(iml));
+				warnIM.setValueIgnoreWarning(Double.valueOf(iml));
 			} else {
-				im.setValue(new Double(iml));
+				im.setValue(Double.valueOf(iml));
 			}
 		}
 
