@@ -105,7 +105,7 @@ public class Frankel96_EqkRupForecast extends AbstractERF{
 
   // For fraction of moment rate on GR parameter
   private final static String FRAC_GR_PARAM_NAME ="GR Fraction on B Faults";
-  private Double DEFAULT_FRAC_GR_VAL= new Double(0.5);
+  private Double DEFAULT_FRAC_GR_VAL= Double.valueOf(0.5);
   private final static String FRAC_GR_PARAM_UNITS = null;
   private final static String FRAC_GR_PARAM_INFO = "Fraction of moment-rate put into GR dist on class-B faults";
   private final static double FRAC_GR_PARAM_MIN = 0;
@@ -114,7 +114,7 @@ public class Frankel96_EqkRupForecast extends AbstractERF{
 
   // For rupture offset lenth along fault parameter
   private final static String RUP_OFFSET_PARAM_NAME ="Rupture Offset";
-  private Double DEFAULT_RUP_OFFSET_VAL= new Double(10);
+  private Double DEFAULT_RUP_OFFSET_VAL= Double.valueOf(10);
   private final static String RUP_OFFSET_PARAM_UNITS = "km";
   private final static String RUP_OFFSET_PARAM_INFO = "Length of offset for floating ruptures";
   private final static double RUP_OFFSET_PARAM_MIN = 1;
@@ -283,9 +283,9 @@ public class Frankel96_EqkRupForecast extends AbstractERF{
               if( !it.hasNext() ) throw ERR;
               st =new StringTokenizer(it.next().toString().trim());
 
-              try{ lat = new Double(st.nextToken()).doubleValue(); }
+              try{ lat = Double.valueOf(st.nextToken()).doubleValue(); }
               catch( NumberFormatException e){ throw ERR; }
-              try{ lon = new Double(st.nextToken()).doubleValue(); }
+              try{ lon = Double.valueOf(st.nextToken()).doubleValue(); }
               catch( NumberFormatException e){ throw ERR; }
 
               Location loc = new Location(lat, lon, upperSeismoDepth);
