@@ -103,10 +103,10 @@ public class CB_2003_AttenRel extends AttenuationRelationship {
 	public final static String SITE_TYPE_DEFAULT = "Firm-Soil";
 
 	// warning constraints:
-	protected final static Double MAG_WARN_MIN = new Double(5);
-	protected final static Double MAG_WARN_MAX = new Double(8);
-	protected final static Double DISTANCE_SEIS_WARN_MIN = new Double(3.0);
-	protected final static Double DISTANCE_SEIS_WARN_MAX = new Double(60.0);
+	protected final static Double MAG_WARN_MIN = Double.valueOf(5);
+	protected final static Double MAG_WARN_MAX = Double.valueOf(8);
+	protected final static Double DISTANCE_SEIS_WARN_MIN = Double.valueOf(3.0);
+	protected final static Double DISTANCE_SEIS_WARN_MAX = Double.valueOf(60.0);
 	// the minimum warning will get overridden by seisDepth is less than seisDepth
 
 	/**
@@ -117,9 +117,9 @@ public class CB_2003_AttenRel extends AttenuationRelationship {
 	public final static String HANGING_WALL_NAME = "Hanging Wall Param.";
 	// no units
 	public final static String HANGING_WALL_INFO = "1.0 if site is within surface projection of rupture, tapering (linearly) to 0.0 at 5 km beyond";
-	protected final static Double HANGING_WALL_MIN = new Double(0);
-	protected final static Double HANGING_WALL_MAX = new Double(1);
-	protected final static Double HANGING_WALL_DEFAULT = new Double(0.0);
+	protected final static Double HANGING_WALL_MIN = Double.valueOf(0);
+	protected final static Double HANGING_WALL_MAX = Double.valueOf(1);
+	protected final static Double HANGING_WALL_DEFAULT = Double.valueOf(0.0);
 
 	/**
 	 * Joyner-Boore Distance parameter, used to compute the hanging-wall
@@ -179,7 +179,7 @@ public class CB_2003_AttenRel extends AttenuationRelationship {
 	 */
 	public void setEqkRupture(EqkRupture eqkRupture) throws InvalidRangeException {
 
-		magParam.setValueIgnoreWarning(new Double(eqkRupture.getMag()));
+		magParam.setValueIgnoreWarning(Double.valueOf(eqkRupture.getMag()));
 		setFaultTypeFromRake(eqkRupture.getAveRake(),
 				eqkRupture.getRuptureSurface().getAveDip());
 		this.eqkRupture = eqkRupture;
@@ -687,7 +687,7 @@ public class CB_2003_AttenRel extends AttenuationRelationship {
 			CB_2003_AttenRelCoefficients coeff = (CB_2003_AttenRelCoefficients)
 			horzCoefficients.get(keys.nextElement());
 			if (coeff.period >= 0) {
-				set.add(new Double(coeff.period));
+				set.add(Double.valueOf(coeff.period));
 			}
 		}
 		Iterator it = set.iterator();
@@ -779,81 +779,81 @@ public class CB_2003_AttenRel extends AttenuationRelationship {
 
 		// SA/0.0 - this is "Cor. PGA" (corrected, as he recommends for SA at zero period) from his Table 4
 		CB_2003_AttenRelCoefficients coeff0 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.0")).doubleValue(),
 				0.0, -4.033, 0.812, 0.036, -1.061, 0.041, -0.005, -0.018, 0.766, 0.034,
 				0.343, 0.351, -0.123, -0.138, -0.289, 0.370, 0.920, 0.219, -0.371);
 		// SA/0.05
 		CB_2003_AttenRelCoefficients coeff1 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.05")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.05")).doubleValue(),
 				0.05, -3.740, 0.812, 0.036, -1.121, 0.058, -0.004, -0.028, 0.724, 0.032,
 				0.302, 0.362, -0.140, -0.158, -0.205, 0.370, 0.940, 0.239, -0.304);
 		// SA/0.075
 		CB_2003_AttenRelCoefficients coeff2 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.075")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.075")).doubleValue(),
 				0.075, -3.076, 0.812, 0.050, -1.252, 0.121, -0.005, -0.051, 0.648,
 				0.040, 0.243, 0.333, -0.150, -0.196, -0.208, 0.370, 0.952, 0.251,
 				-0.250);
 		// SA/0.1
 		CB_2003_AttenRelCoefficients coeff3 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.1")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.1")).doubleValue(),
 				0.10, -2.661, 0.812, 0.060, -1.308, 0.166, -0.009, -0.068, 0.621, 0.046,
 				0.224, 0.313, -0.146, -0.253, -0.258, 0.370, 0.958, 0.257, -0.212);
 		// SA/0.15
 		CB_2003_AttenRelCoefficients coeff4 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.15")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.15")).doubleValue(),
 				0.15, -2.270, 0.812, 0.041, -1.324, 0.212, -0.033, -0.081, 0.613, 0.031,
 				0.318, 0.344, -0.176, -0.267, -0.284, 0.370, 0.974, 0.273, -0.238);
 		// SA/0.2
 		CB_2003_AttenRelCoefficients coeff5 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.2")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.2")).doubleValue(),
 				0.20, -2.771, 0.812, 0.030, -1.153, 0.098, -0.014, -0.038, 0.704, 0.026,
 				0.296, 0.342, -0.148, -0.183, -0.359, 0.370, 0.981, 0.280, -0.292);
 		// SA/0.3
 		CB_2003_AttenRelCoefficients coeff6 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.3")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.3")).doubleValue(),
 				0.30, -2.999, 0.812, 0.007, -1.080, 0.059, -0.007, -0.022, 0.752, 0.007,
 				0.359, 0.385, -0.162, -0.157, -0.585, 0.370, 0.984, 0.283, -0.401);
 		// SA/0.4
 		CB_2003_AttenRelCoefficients coeff7 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.4")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.4")).doubleValue(),
 				0.40, -3.511, 0.812, -0.015, -0.964, 0.024, -0.002, -0.005, 0.842,
 				-0.016, 0.379, 0.438, -0.078, -0.129, -0.557, 0.370, 0.987, 0.286,
 				-0.487);
 		// SA/0.5
 		CB_2003_AttenRelCoefficients coeff8 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.5")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.5")).doubleValue(),
 				0.50, -3.556, 0.812, -0.035, -0.964, 0.023, -0.002, -0.004, 0.842,
 				-0.036, 0.406, 0.479, -0.122, -0.130, -0.701, 0.370, 0.990, 0.289,
 				-0.553);
 		// SA/0.75
 		CB_2003_AttenRelCoefficients coeff9 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.75")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.75")).doubleValue(),
 				0.75, -3.709, 0.812, -0.071, -0.964, 0.021, -0.002, -0.002, 0.842,
 				-0.074, 0.347, 0.419, -0.108, -0.124, -0.796, 0.331, 1.021, 0.320,
 				-0.653);
 		// SA/1.0
 		CB_2003_AttenRelCoefficients coeff10 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("1.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("1.0")).doubleValue(),
 				1.0, -3.867, 0.812, -0.101, -0.964, 0.019, 0, 0, 0.842, -0.105, 0.329,
 				0.338, -0.073, -0.072, -0.858, 0.281, 1.021, 0.320, -0.698);
 		// SA/1.5
 		CB_2003_AttenRelCoefficients coeff11 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("1.5")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("1.5")).doubleValue(),
 				1.5, -4.093, 0.812, -0.150, -0.964, 0.019, 0, 0, 0.842, -0.155, 0.217,
 				0.188, -0.079, -0.056, -0.954, 0.210, 1.021, 0.320, -0.704);
 		// SA/2.0
 		CB_2003_AttenRelCoefficients coeff12 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("2.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("2.0")).doubleValue(),
 				2.0, -4.311, 0.812, -0.180, -0.964, 0.019, 0, 0, 0.842, -0.187, 0.060,
 				0.064, -0.124, -0.116, -0.916, 0.160, 1.021, 0.320, -0.655);
 		// SA/3.0
 		CB_2003_AttenRelCoefficients coeff13 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("3.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("3.0")).doubleValue(),
 				3.0, -4.817, 0.812, -0.193, -0.964, 0.019, 0, 0, 0.842, -0.200, -0.079,
 				0.021, -0.154, -0.117, -0.873, 0.089, 1.021, 0.320, -0.655);
 		// SA/4.0
 		CB_2003_AttenRelCoefficients coeff14 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("4.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("4.0")).doubleValue(),
 				4.0, -5.211, 0.812, -0.202, -0.964, 0.019, 0, 0, 0.842, -0.209, -0.061,
 				0.057, -0.054, -0.261, -0.889, 0.039, 1.021, 0.320, -0.655);
 
@@ -900,77 +900,77 @@ public class CB_2003_AttenRel extends AttenuationRelationship {
 
 		// SA/0.0 - this is "Cor. PGA" (corrected, as he recommends for SA at zero period) from his Table 4
 		CB_2003_AttenRelCoefficients coeff0 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.0")).doubleValue(),
 				0.0, -3.108, 0.756, 0, -1.287, 0.142, 0.046, -0.040, 0.587, 0, 0.253,
 				0.173, -0.135, -0.138, -0.256, 0.630, 0.975, 0.274, -0.371);
 		// SA/0.05
 		CB_2003_AttenRelCoefficients coeff1 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.05")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.05")).doubleValue(),
 				0.05, -1.918, 0.756, 0, -1.517, 0.309, 0.069, -0.023, 0.498, 0, 0.058,
 				0.100, -0.195, -0.274, -0.219, 0.630, 1.031, 0.330, -0.304);
 		// SA/0.075
 		CB_2003_AttenRelCoefficients coeff2 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.075")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.075")).doubleValue(),
 				0.075, -1.504, 0.756, 0, -1.551, 0.343, 0.083, 0.000, 0.487, 0, 0.135,
 				0.182, -0.224, -0.303, -0.263, 0.630, 1.031, 0.330, -0.250);
 		// SA/0.1
 		CB_2003_AttenRelCoefficients coeff3 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.1")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.1")).doubleValue(),
 				0.10, -1.672, 0.756, 0, -1.473, 0.282, 0.062, 0.001, 0.513, 0, 0.168,
 				0.210, -0.198, -0.275, -0.252, 0.630, 1.031, 0.330, -0.212);
 		// SA/0.15
 		CB_2003_AttenRelCoefficients coeff4 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.15")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.15")).doubleValue(),
 				0.15, -2.323, 0.756, 0, -1.280, 0.171, 0.045, 0.008, 0.591, 0, 0.223,
 				0.238, -0.170, -0.175, -0.270, 0.630, 1.031, 0.330, -0.238);
 		// SA/0.2
 		CB_2003_AttenRelCoefficients coeff5 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.2")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.2")).doubleValue(),
 				0.20, -2.998, 0.756, 0, -1.131, 0.089, 0.028, 0.004, 0.668, 0, 0.234,
 				0.256, -0.098, -0.041, -0.311, 0.571, 1.031, 0.330, -0.292);
 		// SA/0.3
 		CB_2003_AttenRelCoefficients coeff6 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.3")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.3")).doubleValue(),
 				0.30, -3.721, 0.756, 0.007, -1.028, 0.050, 0.010, 0.004, 0.736, 0.007,
 				0.249, 0.328, -0.026, 0.082, -0.265, 0.488, 1.031, 0.330, -0.401);
 		// SA/0.4
 		CB_2003_AttenRelCoefficients coeff7 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.4")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.4")).doubleValue(),
 				0.40, -4.536, 0.756, -0.015, -0.812, 0.012, 0, 0, 0.931, -0.018, 0.299,
 				0.317, -0.017, 0.022, -0.257, 0.428, 1.031, 0.330, -0.487);
 		// SA/0.5
 		CB_2003_AttenRelCoefficients coeff8 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.5")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.5")).doubleValue(),
 				0.50, -4.651, 0.756, -0.035, -0.812, 0.012, 0, 0, 0.931, -0.043, 0.243,
 				0.354, -0.020, 0.092, -0.293, 0.383, 1.031, 0.330, -0.553);
 		// SA/0.75
 		CB_2003_AttenRelCoefficients coeff9 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("0.75")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("0.75")).doubleValue(),
 				0.75, -4.903, 0.756, -0.071, -0.812, 0.012, 0, 0, 0.931, -0.087, 0.295,
 				0.418, 0.078, 0.091, -0.349, 0.299, 1.031, 0.330, -0.653);
 		// SA/1.0
 		CB_2003_AttenRelCoefficients coeff10 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("1.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("1.0")).doubleValue(),
 				1.0, -4.950, 0.756, -0.101, -0.812, 0.012, 0, 0, 0.931, -0.124, 0.266,
 				0.315, 0.043, 0.101, -0.481, 0.240, 1.031, 0.330, -0.698);
 		// SA/1.5
 		CB_2003_AttenRelCoefficients coeff11 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("1.5")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("1.5")).doubleValue(),
 				1.5, -5.073, 0.756, -0.150, -0.812, 0.012, 0, 0, 0.931, -0.184, 0.171,
 				0.211, -0.038, -0.018, -0.518, 0.240, 1.031, 0.330, -0.704);
 		// SA/2.0
 		CB_2003_AttenRelCoefficients coeff12 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("2.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("2.0")).doubleValue(),
 				2.0, -5.292, 0.756, -0.180, -0.812, 0.012, 0, 0, 0.931, -0.222, 0.114,
 				0.115, 0.033, -0.022, -0.503, 0.240, 1.031, 0.330, -0.655);
 		// SA/3.0
 		CB_2003_AttenRelCoefficients coeff13 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("3.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("3.0")).doubleValue(),
 				3.0, -5.748, 0.756, -0.193, -0.812, 0.012, 0, 0, 0.931, -0.238, 0.179,
 				0.159, -0.010, -0.047, -0.539, 0.240, 1.031, 0.330, -0.655);
 		// SA/4.0
 		CB_2003_AttenRelCoefficients coeff14 = new CB_2003_AttenRelCoefficients(
-				SA_Param.NAME + '/' + (new Double("4.0")).doubleValue(),
+				SA_Param.NAME + '/' + (Double.valueOf("4.0")).doubleValue(),
 				4.0, -6.042, 0.756, -0.202, -0.812, 0.012, 0, 0, 0.931, -0.248, 0.237,
 				0.134, -0.059, -0.267, -0.606, 0.240, 1.031, 0.330, -0.655);
 
