@@ -39,9 +39,9 @@ public class DistanceRupParameter extends AbstractDoublePropEffectParam {
 	/** Hardcoded info string */
 	public final static String INFO = "Rupture Distance (closest distance to fault surface)";
 	/** Hardcoded min allowed value */
-	private final static Double MIN = new Double(0.0);
+	private final static Double MIN = Double.valueOf(0.0);
 	/** Hardcoded max allowed value */
-	private final static Double MAX = new Double(Double.MAX_VALUE);
+	private final static Double MAX = Double.valueOf(Double.MAX_VALUE);
 
 
 	/** No-Arg constructor that calls init(). No constraint so all values are allowed.  */
@@ -179,7 +179,7 @@ public class DistanceRupParameter extends AbstractDoublePropEffectParam {
 		Double val = null, val2 = null;
 		if( value != null ) {
 			val = ( Double ) this.value;
-			val2 = new Double( val.doubleValue() );
+			val2 = Double.valueOf( val.doubleValue() );
 		}
 
 		DistanceRupParameter param = new DistanceRupParameter(  );
